--- a/src/components/Silvitko/styles.scss
+++ b/src/components/Silvitko/styles.scss
@@ -1,17 +1,9 @@
-.silvitko {
-  display: flex;
-  flex-direction: column;
+.silvitko--home {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
 }
 
-.silvitko-mobile{
-  animation: mobile 10s linear infinte;
-}
-
-@keyframes mobile {
-  0% {bottom: 0px;}
-  50% {bottom: 50px;}
-  100% {bottom: 0px;}
-}
 
 .seagull-flying {
   animation: seagull-flying 6s linear infinite;
@@ -24,12 +16,6 @@
   height: 35px;
   width: 60px;
   background-repeat: no-repeat;
-}
-
-.silvitko--absolute-home{
-  position: absolute;
-  right: 0;
-  bottom: 0;
 }
 
 
@@ -48,7 +34,7 @@
   float: right;
   height: 100px;
   width: 100px;
-
+  clear: right;
 }
 
 
@@ -75,10 +61,8 @@
 }
 
 @media only screen and (min-width: 1015px) {
-  .silvitko--absolute {
-    position: absolute;
-    right: 0;
-    bottom: 0;
+  .silvitko--home {
+    bottom: 60px;
   }
 }
 
@@ -90,6 +74,15 @@
   .silvitko__sailing {
     animation: sailing 18s linear infinite;
   }
+  .silvitko--home {
+    bottom: 130px;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .silvitko--home {
+    bottom: 165px;
+  }
 }
 
 @media only screen and (min-width: 1600px) {
@@ -98,5 +91,8 @@
   }
   .silvitko__sailing {
     animation: sailing 23s linear infinite;
+  }
+  .silvitko--home {
+    bottom: 190px;
   }
 }
